2002-11-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmProxy/FvwmProxy.c:
	added "Colorset" and "SelectColorset" module options and removed default
	colours
	some clean up and performance patches

	* FvwmPager/FvwmPager.c (ParseOptions):
	removed unused variable

	* FvwmProxy/FvwmProxy.c (ConfigureWindow):
	fixed WindowlistSkip style in FvwmProxy
	(IconifyWindow):
	fixed displaying proxies when deiconifying windows

	* Makefile.am:
	build and install FvwmProxy

	* FvwmProxy/FvwmProxy.c:
	rewrote the window list handling to fix race conditions
	(OpenWindows):
	do not set the WMNormalHints - the proxies are override_redirect
	(delete_ProxyWindow):
	fixed memory leak

2002-11-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmPager/x_pager.c (DrawGrid):
	fixed hang with NoSeparators option

2002-10-31  olicha  <olivier.chapuis@free.fr>

	* FvwmWharf/icons.c (LoadIconFile):
	* FvwmScript/FvwmScript.c (LoadIcon):
	* FvwmIconBox/FvwmIconBox.c (freeitem):
	* FvwmIconBox/icons.c (GetIconFromFile):
	(GetBackPixmap):
	* FvwmIconBox/FvwmIconBox.h (struct icon_info):
	* FvwmBanner/FvwmBanner.c (GetImageFile):
	Updated PImageLoadPixmapFromFile and fixed some colors leaks

2002-10-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmProxy/Makefile.am (EXTRA_DIST):
	removed ConfigFvwmProxy
	* Makefile.am (SUBDIRS):
	* FvwmProxy:
	added FvwmProxy module

2002-10-23  Dan Espen  <dane@mk.telcordia.com>

	* FvwmConsole/FvwmConsole.1: Rework synopsis.
	* FvwmBacker/FvwmBacker.1: Lang check.

2002-10-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmTaskBar/ButtonArray.c (Draw3dRect):
	* FvwmTaskBar/Goodies.c (CreateTipWindow):
	* FvwmPager/x_pager.c (change_colorset):
	(set_window_colorset_background):
	renamed colorset_struct to colorset_t

2002-10-22  olicha  <olivier.chapuis@free.fr>

	* FvwmIconMan/xmanager.c (compare_windows):
	Fixed potential core dump

2002-10-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmWinList/ButtonArray.c (DoButton):
	* FvwmIconBox/FvwmIconBox.c (RedrawIcon):